# circleci-demo-test

./: .gitignore  pyproject.toml
.aidlc/aidlc-rules/aws-aidlc-rule-details/extensions/traceability/: requirements-history.md
.circleci/: config.yml
.kiro/skills/circleci-pipeline/: SKILL.md
.kiro/skills/circleci-pipeline/docs/: architecture.md  cos-integration.md  demo-script.md  setup.md  usage.md
.kiro/skills/circleci-pipeline/templates/: config.yml
.kiro/skills/setup-aidlc/: SKILL.md
.kiro/skills/setup-aidlc-windows/: SKILL.md
.kiro/steering/: circleci.md  git.md
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  unit-test-instructions.md
aidlc-docs/construction/csv-processor-infrastructure/infrastructure-design/: infrastructure-design.md
aidlc-docs/inception/plans/: workflow-planning.md
aidlc-docs/inception/requirements/: requirements.md
infrastructure/: app.py  cdk.json  package.json  stack.py
infrastructure/cdk.out/: CsvProcessorStack.assets.json  CsvProcessorStack.metadata.json  CsvProcessorStack.template.json  asset.b76c3ad5f5546867f2b704762140487d795dccfad4186ab8b621fc036325aba3.py  manifest.json  tree.json
infrastructure/cdk.out/asset.8427e265c68d2716e48ecb2a72acad94ad0945c64c7785c0dd4fada8c79ea566/: trigger_glue.py
infrastructure/stacks/: app_stack.py
src/: __init__.py  handler.py
src/cos_data_lib/: __init__.py
src/cos_data_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_handler.py  test_placeholder.py
