[project]
name = "cos-data-pipeline-demo"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "aws-cdk-lib>=2.150.0",
    "constructs>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.4.0",
    "mypy>=1.5.0",
    "moto>=5.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
